--- a/sites/all/themes/atwork_zen/sass/layouts/_atworklayout.scss
+++ b/sites/all/themes/atwork_zen/sass/layouts/_atworklayout.scss
@@ -71,7 +71,7 @@ and (orientation : portrait) {
   .form-textarea-wrapper textarea {
     min-width:none;
     max-width: none;
-    width:215px;
+    width:197px;
   }
 }
   #views-slideshow-xtra-overlay--home-page-blocks-zen--attachment-4 .views-slideshow-xtra-overlay-row.views-slideshow-xtra-overlay-row {
